// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Bookmark renders bookmark not selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiSwitch-switchBase Bookmark-colorSwitchBase-1 MuiSwitch-colorPrimary"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          checked={false}
          className="PrivateSwitchBase-input-8 MuiSwitch-input"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
        <span
          className="MuiSwitch-thumb"
        />
      </span>
    </span>
    <span
      className="MuiSwitch-track Bookmark-colorTrack-2"
    />
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label Bookmark-label-4 MuiTypography-body1"
  >
    Bookmark
  </span>
</label>
`;

exports[`Tests for Bookmark renders bookmark selected correctly 1`] = `
<label
  className="MuiFormControlLabel-root"
  style={
    Object {
      "paddingLeft": 10,
    }
  }
>
  <span
    className="MuiSwitch-root"
  >
    <span
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiSwitch-switchBase Bookmark-colorSwitchBase-1 MuiSwitch-colorPrimary PrivateSwitchBase-checked-6 Mui-checked Bookmark-colorChecked-3"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={null}
    >
      <span
        className="MuiIconButton-label"
      >
        <input
          checked={true}
          className="PrivateSwitchBase-input-8 MuiSwitch-input"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
          value="bookmark"
        />
        <span
          className="MuiSwitch-thumb"
        />
      </span>
    </span>
    <span
      className="MuiSwitch-track Bookmark-colorTrack-2"
    />
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label Bookmark-label-4 MuiTypography-body1"
  >
    Bookmark
  </span>
</label>
`;
